--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .DS_Store
 scratchpad.R
 to-do-list.R
+discrete_bottle_temporary_download.csv
 output/
 extra/
 data/
@@ -14,3 +15,4 @@ Figures/
 Old_Method/
 QC/
 scrap/
+quarto_dev/
